@@ -1,0 +1,59 @@
+package com.yuanno.soulsawakening.items;
+
+import net.minecraft.block.DispenserBlock;
+import net.minecraft.dispenser.DefaultDispenseItemBehavior;
+import net.minecraft.dispenser.IBlockSource;
+import net.minecraft.entity.EntityType;
+import net.minecraft.entity.SpawnReason;
+import net.minecraft.item.ItemStack;
+import net.minecraft.item.SpawnEggItem;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.Direction;
+import net.minecraftforge.common.util.Lazy;
+import net.minecraftforge.fml.RegistryObject;
+import net.minecraftforge.fml.common.ObfuscationReflectionHelper;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+
+public class CustomSpawnEggItem extends SpawnEggItem {
+
+    protected static final List<CustomSpawnEggItem> UNADDED_EGGS = new ArrayList<>();
+    private final Lazy<? extends EntityType<?>> entityTypeSupplier;
+
+    public CustomSpawnEggItem(final RegistryObject<? extends EntityType<?>> entityTypeSupplier,
+                           int primaryColorIn, int secondaryColorIn, Properties builder) {
+        super(null, primaryColorIn, secondaryColorIn, builder);
+        this.entityTypeSupplier = Lazy.of(entityTypeSupplier::get);
+        UNADDED_EGGS.add(this);
+    }
+
+    public static void initSpawnEggs() {
+        final Map<EntityType<?>, SpawnEggItem> EGGS = ObfuscationReflectionHelper.getPrivateValue(
+                SpawnEggItem.class, null, "field_195987_b");
+        DefaultDispenseItemBehavior dispenseItemBehavior = new DefaultDispenseItemBehavior() {
+            @Override
+            protected ItemStack execute(IBlockSource source, ItemStack stack){
+                Direction direction = source.getBlockState().getValue(DispenserBlock.FACING);
+                EntityType<?> type = ((SpawnEggItem) stack.getItem()).getType(stack.getTag());
+                type.spawn(source.getLevel(), stack, null,source.getPos(), SpawnReason.DISPENSER,
+                        direction != Direction.UP, false);
+                stack.shrink(1);
+                return stack;
+            }
+        };
+
+        for(final SpawnEggItem spawnEgg : UNADDED_EGGS) {
+            EGGS.put(spawnEgg.getType(null), spawnEgg);
+            DispenserBlock.registerBehavior(spawnEgg, dispenseItemBehavior);
+        }
+
+        UNADDED_EGGS.clear();
+    }
+
+    @Override
+    public EntityType<?> getType(CompoundNBT nbt) {
+        return this.entityTypeSupplier.get();
+    }
+}
