@@ -19,6 +19,7 @@
 - wind dodge ability
 - wind slash ability
 - config for randomizing zanpakuto abilities or not water stays randomized in both cases
+- spawn eggs for all entities
 
 ## changes
 - every playthrough won't have the same abilities for shinigami when you unlock shikai depending on your stats -or not- you might get other abilities
